[package]
name = "lindera-cli"
version = "0.7.0"
authors = [
    "Paul Masurel <paul.masurel@gmail.com>",
    "Minoru Osuka <minoru.osuka@gmail.com>",
    "Jun Ohtani <johtani@gmail.com>",
    "Tomoko Uchida <tomoko.uchida.1111@gmail.com>"
    ]
edition = "2018"
description = "A command-line interface for Lindera."
documentation = "https://docs.rs/lindera-cli"
homepage = "https://github.com/lindera-morphology/lindera-cli"
repository = "https://github.com/lindera-morphology/lindera-cli"
readme = "README.md"
keywords = ["morphological", "analysis", "cli"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
clap = "2.33"
stringreader = "0.1"

lindera = "0.7"
lindera-core = "0.7"

[[bin]]
name = "lindera"
path = "src/main.rs"
